# edgeless

./: .gitignore  Cargo.toml
.cargo/: config  config.toml
documentation/: deploy_step_by_step.md
edgeless_api/: Cargo.toml
edgeless_api/proto/: messages.proto
edgeless_api/src/: function_instance.rs  node_registration.rs  resource_configuration.rs  workflow_instance.rs  workflow_instance_structs.rs
edgeless_api/src/coap_impl/: node_register.rs
edgeless_api/src/grpc_impl/inner/: domain_registration.rs  function_instance.rs  guest_api_function.rs  guest_api_host.rs  node_management.rs  node_registration.rs  resource_configuration.rs  workflow_instance.rs
edgeless_api/src/grpc_impl/outer/: agent.rs  container_function.rs  container_runtime.rs  controller.rs  domain_register.rs  invocation.rs  node_register.rs  orc.rs
edgeless_bal/src/: lib.rs
edgeless_benchmark/src/: engine.rs
edgeless_cli/: Cargo.toml.orig
edgeless_cli/src/: edgeless_cli.rs  lib.rs  workflow_spec.rs
edgeless_con/src/controller/: controller_task.rs  test.rs
edgeless_function/: Cargo.toml
edgeless_function/src/: export.rs  imports.rs  lib.rs  output_api.rs
edgeless_node/: Cargo.toml
edgeless_node/src/: lib.rs
edgeless_node/src/base_runtime/: guest_api.rs  runtime.rs
edgeless_node/src/native_runner/: function_instance.rs
edgeless_node/src/resources/: sqlx.rs
edgeless_node/src/wasm_runner/test/: mod.rs
edgeless_orc/src/: deployment_requirements.rs  lib.rs  orchestration_logic.rs  orchestrator_task.rs  proxy_redis.rs  resource_provider.rs
edgeless_orc/src/orchestrator/: test.rs
edgeless_systemtests/src/: lib.rs
examples/dda_demo/mock-services/mock-robot-arm/robot-gui/js/: WorkingSpace.js
examples/gpu_container/: workflow.json
examples/gpu_demo/: workflow.json
examples/gpu_matmul/: workflow.json
examples/noop/: workflow_native.json
examples/ollama/: README.md
examples/ping_pong/: workflow_mixed.json  workflow_native.json
examples/sdxl/: workflow.json
examples/sdxl_file_io_cuda/: workflow.json
examples/sdxl_webapp_cuda/: README.md  web_ui_server.py  workflow.json
examples/simple_workflow_http/: README.md  workflow.json
examples/vision_demo/: file_save_server.py  workflow.json
functions/ai_engine/: Cargo.toml  function.json
functions/ai_engine/src/: lib.rs
functions/camera_source/: Cargo.toml  function.json
functions/camera_source/src/: lib.rs
functions/db_reader/: Cargo.toml  function.json
functions/db_reader/src/: lib.rs
functions/db_reader_with_cache/: BUILD.md  Cargo.toml  function.json
functions/db_reader_with_cache/src/: lib.rs
functions/db_writer/: Cargo.toml  function.json
functions/db_writer/.omc/: project-memory.json
functions/db_writer/.omc/state/: agent-replay-67aa53ac-b085-4fb9-a09b-e9e817772f44.jsonl  subagent-tracking.json
functions/db_writer/.omc/state/checkpoints/: checkpoint-2026-04-11T03-54-26-668Z.json
functions/db_writer/src/: lib.rs
functions/gpu_client/: function.json
functions/gpu_client/src/: lib.rs
functions/gpu_matmul_client/: Cargo.toml  function.json
functions/gpu_matmul_worker/: Cargo.toml  function.json
functions/gpu_matmul_worker/src/: lib.rs
functions/gpu_worker/: Cargo.toml  function.json
functions/image_history_db/: Cargo.toml
functions/image_history_db/src/: lib.rs
functions/noop/: Cargo.toml
functions/ping/src/: lib.rs
functions/ping_async/: Cargo.toml
functions/pong/: Cargo.toml
functions/pong_async/: Cargo.toml
functions/sdxl_file_reader/: Cargo.toml  function.json
functions/sdxl_file_writer/: Cargo.toml  function.json
functions/sdxl_inference_b64_cuda/: Cargo.toml  function.json
functions/sdxl_inference_b64_cuda/src/: lib.rs
functions/sdxl_inference_cuda/: function.json
functions/sdxl_inference_cuda/src/: lib.rs
functions/sdxl_web_receiver/: Cargo.toml  function.json
functions/sdxl_web_receiver/src/: lib.rs
functions/sdxl_web_sender/: Cargo.toml  function.json
functions/sdxl_web_sender/src/: lib.rs
functions/visualizer/: Cargo.toml  function.json
functions/visualizer/src/: lib.rs
functions/web-app/: index.html
