[workspace]

[package]
name = "camera_source"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
edgeless_http = { path = "../../edgeless_http" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
