[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "gpu_worker"
version = "0.1.0"
authors = ["Edgeless Assistant"]
edition = "2021"

[lib]
name = "gpu_worker"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
candle-core = { version = "0.7.0", features = ["cuda"] }
log = "0.4"
