[package]
name = "image_history_db"
version = "0.1.0"
edition = "2024"

[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[lib]
name = "image_history_db"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"