[workspace]

[package]
name = "sdxl_file_writer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
edgeless_http = { path = "../../edgeless_http" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
